# autonomous_browser_ai_agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yml
docs/: ARCHITECTURE.md  DEV_NOTES.md  QUICKSTART.md  ROADMAP.md
src/: __init__.py  __main__.py
src/agent/: __init__.py  agent.py  evaluator.py  executor.py  memory.py  orchestrator.py  planner.py  planning.py  prompt_templates.py  tools.py
src/browser/: __init__.py  actions.py  browser.py  browser_config.py  dom_analyzer.py  utils.py
src/config/: __init__.py  llm_config.py  settings.py
src/controller/: __init__.py  browser_controller.py  logger.py  task_manager.py  workflow.py
src/examples/: __init__.py  example_multiagent.py  example_orchestrator.py  example_search.py  example_wikipedia.py
src/llm/: __init__.py  base.py  bedrock_provider.py  factory.py  gemini_provider.py  mock_provider.py  openai_provider.py
tests/agent/: test_agent.py  test_evaluator.py  test_executor.py  test_orchestrator.py  test_planner.py  test_planner_agent.py
tests/browser/: test_actions.py  test_utils.py
tests/controller/: test_browser_controller.py
tests/e2e/: test_playwright_e2e.py
tests/fixtures/: simple_page.html
tests/llm/: test_mock_provider.py
